{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 95,
  "lineage": "5987cd92-0373-ab06-c274-e874f75be9b8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03c7f8e3c63aa447d",
            "domain": "vpc",
            "id": "eipalloc-08974b78c6e0b02c7",
            "instance": "i-01f61c453bc88aa0d",
            "network_interface": "eni-0033bb5255b9e4d4d",
            "private_dns": "ip-10-0-1-54.eu-west-2.compute.internal",
            "private_ip": "10.0.1.54",
            "public_dns": "ec2-3-11-136-120.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.11.136.120",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_security_group.allow_all_traffic",
            "aws_subnet.eu_west_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-029dbaca987ff4afe",
            "arn": "arn:aws:ec2:eu-west-2:890725220831:instance/i-01f61c453bc88aa0d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01f61c453bc88aa0d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2a05:d01c:cc8:2a01:95dc:a6f1:58e8:8351"
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0033bb5255b9e4d4d",
            "private_dns": "ip-10-0-1-54.eu-west-2.compute.internal",
            "private_ip": "10.0.1.54",
            "public_dns": "ec2-3-11-136-120.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.11.136.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-067d306d0772133b8",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0cef0becbd604d241",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07d39bc5cc1d257c8"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all_traffic",
            "aws_subnet.eu_west_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-01e2bda27beb33048",
            "owner_id": "890725220831",
            "vpc_id": "vpc-00e723d181da33140"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "hiit_tribe_dev",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:890725220831:loadbalancer/app/hiit-tribe-dev/10726d8cbeaa00fd",
            "arn_suffix": "app/hiit-tribe-dev/10726d8cbeaa00fd",
            "dns_name": "hiit-tribe-dev-554886192.eu-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:890725220831:loadbalancer/app/hiit-tribe-dev/10726d8cbeaa00fd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hiit-tribe-dev",
            "security_groups": [
              "sg-07d39bc5cc1d257c8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0199a5c93f0ae7c06"
              },
              {
                "subnet_id": "subnet-0cef0becbd604d241"
              }
            ],
            "subnets": [
              "subnet-0199a5c93f0ae7c06",
              "subnet-0cef0becbd604d241"
            ],
            "tags": {
              "target_app": "hiit-tribe-dev"
            },
            "vpc_id": "vpc-00e723d181da33140",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.allow_all_traffic",
            "aws_subnet.eu_west_2a",
            "aws_subnet.eu_west_2b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hiit_tribe_dev",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:890725220831:listener/app/hiit-tribe-dev/10726d8cbeaa00fd/d0cf875afb428075",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:890725220831:targetgroup/hiit-tribe-dev/df8595936a2244fd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:890725220831:listener/app/hiit-tribe-dev/10726d8cbeaa00fd/d0cf875afb428075",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:890725220831:loadbalancer/app/hiit-tribe-dev/10726d8cbeaa00fd",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.hiit_tribe_dev",
            "aws_lb_target_group.hiit_tribe_dev",
            "aws_security_group.allow_all_traffic",
            "aws_subnet.eu_west_2a",
            "aws_subnet.eu_west_2b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hiit_tribe_dev",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:890725220831:targetgroup/hiit-tribe-dev/df8595936a2244fd",
            "arn_suffix": "targetgroup/hiit-tribe-dev/df8595936a2244fd",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:890725220831:targetgroup/hiit-tribe-dev/df8595936a2244fd",
            "lambda_multi_value_headers_enabled": false,
            "name": "hiit-tribe-dev",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00e723d181da33140"
          },
          "dependencies": [
            "aws_lb.hiit_tribe_dev",
            "aws_security_group.allow_all_traffic",
            "aws_subnet.eu_west_2a",
            "aws_subnet.eu_west_2b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eu_west_2a_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b8eed42d6242bb5f",
            "owner_id": "890725220831",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e2bda27beb33048",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e2bda27beb33048",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-00e723d181da33140"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eu_west_2b_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0780b8fbb07620ec9",
            "owner_id": "890725220831",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e2bda27beb33048",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e2bda27beb33048",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-00e723d181da33140"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eu_west_2a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088f704bc3c005530",
            "route_table_id": "rtb-0b8eed42d6242bb5f",
            "subnet_id": "subnet-0cef0becbd604d241"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.eu_west_2a_route_table",
            "aws_subnet.eu_west_2a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eu_west_2b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9727bf91faedcfc",
            "route_table_id": "rtb-0780b8fbb07620ec9",
            "subnet_id": "subnet-0199a5c93f0ae7c06"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.eu_west_2b_route_table",
            "aws_subnet.eu_west_2b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_traffic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:890725220831:security-group/sg-07d39bc5cc1d257c8",
            "description": "Allow All traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d39bc5cc1d257c8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all_traffic",
            "name_prefix": null,
            "owner_id": "890725220831",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-00e723d181da33140"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eu_west_2a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:890725220831:subnet/subnet-0cef0becbd604d241",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0cef0becbd604d241",
            "ipv6_cidr_block": "2a05:d01c:cc8:2a01::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0b80035d35e32fa1e",
            "map_public_ip_on_launch": true,
            "owner_id": "890725220831",
            "vpc_id": "vpc-00e723d181da33140"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eu_west_2b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:890725220831:subnet/subnet-0199a5c93f0ae7c06",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0199a5c93f0ae7c06",
            "ipv6_cidr_block": "2a05:d01c:cc8:2a02::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-022c018b29db91524",
            "map_public_ip_on_launch": true,
            "owner_id": "890725220831",
            "vpc_id": "vpc-00e723d181da33140"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:890725220831:vpc/vpc-00e723d181da33140",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-071f5185655330993",
            "default_route_table_id": "rtb-0b24c205d49d3136b",
            "default_security_group_id": "sg-09d28b6c0240cbf48",
            "dhcp_options_id": "dopt-8d6f3be5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00e723d181da33140",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-032ccb43233b8a203",
            "ipv6_cidr_block": "2a05:d01c:cc8:2a00::/56",
            "main_route_table_id": "rtb-0b24c205d49d3136b",
            "owner_id": "890725220831"
          }
        }
      ]
    }
  ]
}